--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>525</width>
-    <height>400</height>
+    <width>474</width>
+    <height>469</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -68,6 +68,13 @@
           </property>
          </widget>
         </item>
+        <item>
+         <widget class="QPushButton" name="exportButton">
+          <property name="text">
+           <string>Export As...</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
       <item>
@@ -93,17 +100,6 @@
     </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>525</width>
-     <height>29</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
